--- a/practice.html
+++ b/practice.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project_1</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="practice.css">
 </head>
 <body>
     <h1 align="center">Making project</h1> <hr>
